Tests improved